top navbar complete

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
              <button class="search_btn" type="button">I'm Feeling Lucky</button>
             </div>
 
+        <div id="left-navbar">
+            <div class="nav-item">About</div>
+            <div class="nav-item">Store</div>
+        </div>
+        <div id="right-navbar">
+            <div class="nav-item">Gmail</div>
+            <div class="nav-item">Images</div>
+            <img class="nav-item" src="https://lh3.googleusercontent.com/ogw/ADGmqu-2M8ye6HJ1dIHPfH7wu9lDUOSAONo_IDZscy6BA0U=s32-c-mo" alt="profile pic">
+        </div>
+
          </div>
     </body>
 
