--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
             <img class="nav-item" src="https://lh3.googleusercontent.com/ogw/ADGmqu-2M8ye6HJ1dIHPfH7wu9lDUOSAONo_IDZscy6BA0U=s32-c-mo" alt="profile pic">
         </div>
 
+        <div id="footer">
+            <div class="footer-item">Advertising</div>
+            <div class="footer-item">Business</div>
+            <div class="footer-item">How Search Works</div>
+            <div class="footer-item"></div>
+            <div class="footer-item">Privacy</div>
+            <div class="footer-item">Terms</div>
+            <div class="footer-item">Settings</div>
+        </div>
+
          </div>
     </body>
 
